tests/errors/erro_lexico_caractere.lua
function void main()
    local x : integer = 10;
    local y : integer = 20;
    -- O caractere '@' não faz parte da gramática/léxico da MiniLua
    local z : integer = x @ y; 
end
